--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,12 @@
 # Azure Functions framework
 azure-functions==1.18.0
 
-applicationinsights
+applicationinsights==0.11.10
 
 # Azure Blob Storage SDK for backup container functionality
 azure-storage-blob==12.19.0
 
 # Utilities and helpers
-python-dotenv==1.0.1
 backoff==2.2.1
+requests==2.32.3
+cryptography==43.0.1
