--- a/.github/workflows/upload-azure-function-zip.yaml
+++ b/.github/workflows/upload-azure-function-zip.yaml
@@ -7,6 +7,8 @@ on:
 jobs:
   upload-azure-function-zip:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Required for uploading release assets
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -37,8 +39,21 @@ jobs:
           cd logzio_function
           func pack --build-native-deps --python
 
-      - name: Upload 'logzio_function' zip file to Azure storage
-        uses: azure/CLI@v2
+      - name: Upload blob to Azure Storage
+        uses: azure/CLI@v1
         with:
+          azcliversion: 2.71.0
           inlineScript: |
-            az storage blob upload --account-name logzioblobtrigger --account-key ${{ secrets.STORAGE_ACCOUNT_KEY }} --file logzio_function/logzio_function.zip --container-name eventhub --name logzio_function-${{ github.event.release.tag_name }}.zip
+            az storage blob upload \
+              --account-name logzioblobtrigger \
+              --account-key ${{ secrets.STORAGE_ACCOUNT_KEY }} \
+              --file logzio_function/logzio_function.zip \
+              --container-name eventhub \
+              --name logzio_function-test.zip
+
+      - name: Upload zip as release asset
+        uses: softprops/action-gh-release@v1
+        with:
+          files: logzio_function/logzio_function.zip
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: ${{ github.event.release.tag_name }}
