--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -21,6 +21,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install pytest
         
     - name: Run E2E tests
       env:
@@ -31,7 +32,7 @@ jobs:
         LogzioApiToken: ${{ secrets.LOGZIO_API_TOKEN }}
         APPINSIGHTS_INSTRUMENTATIONKEY: ${{ secrets.APPINSIGHTS_INSTRUMENTATIONKEY }}
       run: |
-        python LogzioShipper/test_logzio_shipper.py
+        pytest -v LogzioShipper/test_logzio_shipper.py --log-cli-level=INFO
         
     - name: Upload test artifacts
       uses: actions/upload-artifact@v3
