--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Run E2E tests
       env:
         AzureWebJobsStorage: ${{ secrets.AZURE_WEBJOBS_STORAGE }}
-        AZURE_STORAGE_CONTAINER_NAME: ${{ secrets.AZURE_STORAGE_CONTAINER_NAME }}
+        AZURE_STORAGE_CONTAINER_NAME: failedlogbackup
         LogzioURL: ${{ secrets.LOGZIO_URL }}
         LogzioToken: ${{ secrets.LOGZIO_LOGS_TOKEN }}
         LogzioApiToken: ${{ secrets.LOGZIO_API_TOKEN }}
