--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -25,7 +25,7 @@ jobs:
         
     - name: Run E2E tests
       env:
-        AzureWebJobsStorage: ${{ secrets.AZURE_WEBJOBS_STORAGE }}
+        AzureWebJobsStorage: ${{ secrets.AZUREWEBJOBSSTORAGE }}
         AZURE_STORAGE_CONTAINER_NAME: failedlogbackup
         LogzioURL: ${{ secrets.LOGZIO_URL }}
         LogzioToken: ${{ secrets.LOGZIO_LOGS_TOKEN }}
