--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -26,6 +26,8 @@ jobs:
     - name: Run E2E tests
       env:
         AzureWebJobsStorage: ${{ secrets.AZUREWEBJOBSSTORAGE }}
+        AZURE_STORAGE_CONTAINER_NAME: failedlogbackup
+        LogzioURL: https://listener.logz.io:8071
         LogzioToken: ${{ secrets.LOGZIO_LOGS_TOKEN }}
         LogzioApiToken: ${{ secrets.LOGZIO_API_TOKEN }}
         APPINSIGHTS_INSTRUMENTATIONKEY: ${{ secrets.APPINSIGHTS_INSTRUMENTATIONKEY }}
