--- a/.github/workflows/upload-azure-function-zip.yaml
+++ b/.github/workflows/upload-azure-function-zip.yaml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Azure Login
-        uses: azure/actions/login@v1
+        uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
@@ -45,8 +45,13 @@ jobs:
           tag_name: ${{ github.event.release.tag_name }}
 
       - name: Upload 'logzio_function' zip file to Azure storage
-        uses: azure/CLI@v2
+        uses: azure/cli@v2
         with:
           inlineScript: |
-            az storage blob upload --account-name logzioblobtrigger --account-key ${{ secrets.STORAGE_ACCOUNT_KEY }} --file logzio_function/logzio_function.zip --container-name eventhub --name logzio_function-${{ github.event.release.tag_name }}.zip
+            az storage blob upload \
+            --account-name logzioblobtrigger \
+            --account-key ${{ secrets.STORAGE_ACCOUNT_KEY }} \
+            --file logzio_function/logzio_function.zip \
+            --container-name eventhub \
+            --name logzio_function-${{ github.event.release.tag_name }}.zip
             
