--auth-mode key

--- a/.github/workflows/upload-azure-function-zip.yaml
+++ b/.github/workflows/upload-azure-function-zip.yaml
@@ -51,4 +51,4 @@ jobs:
       - name: Upload function ZIP to Azure Blob
         run: |
           cd logzio_function
-          az storage blob upload -f logzio_function.zip --account-key ${{ secrets.STORAGE_ACCOUNT_KEY }} --account-name logzioblobtrigger -c eventhub -n logzio_function-${{ github.event.release.tag_name }}.zip --overwrite
+          az storage blob upload --auth-mode key -f logzio_function.zip --account-key ${{ secrets.STORAGE_ACCOUNT_KEY }} --account-name logzioblobtrigger -c eventhub -n logzio_function-${{ github.event.release.tag_name }}.zip --overwrite
